# halochat

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.rapo.haloai.data.database.HaloDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  LLMInference.cpp  LLMInference.h  jni_bridge.cpp
app/src/main/java/com/rapo/haloai/: HaloAIApplication.kt
app/src/main/java/com/rapo/haloai/data/database/: HaloDatabase.kt
app/src/main/java/com/rapo/haloai/data/database/converters/: ModelFormatConverter.kt  ModelStatusConverter.kt
app/src/main/java/com/rapo/haloai/data/database/dao/: ChatDao.kt  ModelDao.kt
app/src/main/java/com/rapo/haloai/data/database/entities/: ChatEntity.kt  ChatSessionEntity.kt  ModelEntity.kt
app/src/main/java/com/rapo/haloai/data/model/: GGUFModelRuntime.kt  HardwareAccelerationManager.kt  HuggingFaceModelDownloader.kt  LocalModelImporter.kt  ModelManager.kt  ModelMetadata.kt  ModelRuntime.kt  ONNXModelRuntime.kt
app/src/main/java/com/rapo/haloai/data/repository/: ChatRepository.kt  ModelRepository.kt  SettingsRepository.kt
app/src/main/java/com/rapo/haloai/data/tokenizer/: ONNXTokenizer.kt
app/src/main/java/com/rapo/haloai/di/: DatabaseModule.kt  RepositoryModule.kt  RuntimeModule.kt
app/src/main/java/com/rapo/haloai/presentation/: MainActivity.kt
app/src/main/java/com/rapo/haloai/presentation/screens/: AddModelScreen.kt  ChatScreen.kt  ExperimentalScreen.kt  ModelsScreen.kt  SettingsScreen.kt
app/src/main/java/com/rapo/haloai/presentation/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/rapo/haloai/presentation/viewmodel/: ChatViewModel.kt  ExperimentalViewModel.kt  GreetingViewModel.kt  ModelsViewModel.kt  SettingsViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml
